src/styles/global.css
:root {
  color-scheme: dark light;
  font-family: sans-serif;
}

:root[data-color-scheme='dark'] {
  color-scheme: dark;

  --clr-blue: #8aadf4;
  --clr-lavendar: #b7bdf8;
  --clr-mauve: #c6a0f6;
  --clr-red: #ed8796;
  --clr-yellow: #eed49f;

  --clr-primary: var(--clr-blue);
  --clr-secondary: var(--clr-lavendar);
  --clr-tertiary: var(--clr-mauve);
  --clr-error: var(--clr-red);
  --clr-warning: var(--clr-yellow);

  --clr-text: rgb(202, 211, 245);
  --clr-subtext-1: rgb(184, 192, 224);
  --clr-subtext-0: rgb(165, 173, 203);

  --clr-overlay-2: rgb(147, 154, 183);
  --clr-overlay-1: rgb(128, 135, 162);
  --clr-overlay-0: rgb(110, 115, 141);

  --clr-surface-2: rgb(91, 96, 120);
  --clr-surface-1: rgb(73, 77, 100);
  --clr-surface-0: rgb(54, 58, 79);

  --clr-base: rgb(36, 39, 58);
  --clr-mantle: rgb(30, 32, 48);
  --clr-crust: rgb(24, 25, 38);

  --clr-text-trans-60: rgba(202, 211, 245, 0.6);
  --clr-subtext-1-trans-60: rgba(184, 192, 224, 0.6);
  --clr-subtext-0-trans-60: rgba(165, 173, 203, 0.6);

  --clr-overlay-2-trans-60: rgba(147, 154, 183, 0.6);
  --clr-overlay-1-trans-60: rgba(128, 135, 162, 0.6);
  --clr-overlay-0-trans-60: rgba(110, 115, 141, 0.6);

  --clr-surface-2-trans-60: rgba(91, 96, 120, 0.6);
  --clr-surface-1-trans-60: rgba(73, 77, 100, 0.6);
  --clr-surface-0-trans-60: rgba(54, 58, 79, 0.6);

  --clr-base-trans-60: rgba(36, 39, 58, 0.6);
  --clr-mantle-trans-60: rgba(30, 32, 48, 0.6);
  --clr-crust-trans-60: rgba(24, 25, 38, 0.6);

  --clr-gradient-bg: radial-gradient(
    circle,
    var(--clr-surface-0) 0%,
    var(--clr-base) 50%,
    var(--clr-mantle) 100%
  );
}

:root[data-color-scheme='light'] {
  color-scheme: light;

  --clr-blue: #1e66f5;
  --clr-lavendar: #7287fd;
  --clr-mauve: #8839ef;
  --clr-red: #d20f39;
  --clr-yellow: #df8e1d;

  --clr-primary: var(--clr-blue);
  --clr-secondary: var(--clr-lavendar);
  --clr-tertiary: var(--clr-mauve);
  --clr-error: var(--clr-red);
  --clr-warning: var(--clr-yellow);

  --clr-text: rgb(76, 79, 105);
  --clr-subtext-1: rgb(92, 95, 119);
  --clr-subtext-0: rgb(108, 111, 133);

  --clr-overlay-2: rgb(124, 127, 147);
  --clr-overlay-1: rgb(140, 143, 161);
  --clr-overlay-0: rgb(156, 160, 176);

  --clr-surface-2: rgb(172, 176, 190);
  --clr-surface-1: rgb(188, 192, 204);
  --clr-surface-0: rgb(204, 208, 218);

  --clr-base: rgb(239, 241, 245);
  --clr-mantle: rgb(230, 233, 239);
  --clr-crust: rgb(220, 224, 232);

  --clr-text-trans-60: rgba(76, 79, 105, 0.6);
  --clr-subtext-1-trans-60: rgba(92, 95, 119, 0.6);
  --clr-subtext-0-trans-60: rgba(108, 111, 133, 0.6);

  --clr-overlay-2-trans-60: rgba(124, 127, 147, 0.6);
  --clr-overlay-1-trans-60: rgba(140, 143, 161, 0.6);
  --clr-overlay-0-trans-60: rgba(156, 160, 176, 0.6);

  --clr-surface-2-trans-60: rgba(172, 176, 190, 0.6);
  --clr-surface-1-trans-60: rgba(188, 192, 204, 0.6);
  --clr-surface-0-trans-60: rgba(204, 208, 218, 0.6);

  --clr-base-trans-60: rgba(239, 241, 245, 0.6);
  --clr-mantle-trans-60: rgba(230, 233, 239, 0.6);
  --clr-crust-trans-60: rgba(220, 224, 232, 0.6);

  --clr-gradient-bg: radial-gradient(
    circle,
    var(--clr-base) 0%,
    var(--clr-surface-0) 50%,
    var(--clr-surface-2) 100%
  );
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  min-height: 100dvh;

  padding: 0;
  padding-top: 6rem;
  margin: 0;

  font-family: 'IBM Plex Serif', serif;
  color: var(--clr-text);

  background: var(--clr-base);
  background: var(--clr-gradient-bg);

  overflow-y: auto;
  overflow-x: hidden;
}

body[data-scroll-active='false'] {
  overflow-y: hidden;
}

a,
p,
button {
  color: var(--clr-text);
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.max-width {
  max-width: 1024px;
  margin-inline: auto;
}

#drawer-wrapper {
  content: '';
  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  height: 100vh;

  overflow: hidden;

  pointer-events: none;
}

